[gd_scene load_steps=2 format=2]

[ext_resource path="res://nodes/GameUI/GameUI.gd" type="Script" id=1]

[node name="GameUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="DistanceLabelX" type="Label" parent="."]
margin_left = 1.0
margin_top = 3.0
margin_right = 192.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( -270, -76 )
text = "Distance: 8888"

[node name="DistanceLabelY" type="Label" parent="."]
margin_left = 1.0
margin_top = 19.0
margin_right = 192.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( -270, -76 )
text = "Distance: 8888"

[node name="AngleLabel" type="Label" parent="."]
margin_left = 2.0
margin_top = 38.0
margin_right = 193.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 26, 15 )
text = "Angle: 8888"

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 422.0
margin_top = 126.0
margin_right = 604.0
margin_bottom = 163.0
rect_pivot_offset = Vector2( -1039, -141 )
text = "ScoreLabel"

[node name="RoundLabel" type="Label" parent="."]
margin_left = 842.0
margin_top = 3.0
margin_right = 1024.0
margin_bottom = 40.0
text = "Runde 1"

[node name="MaxFlapsLabel" type="Label" parent="."]
margin_left = 840.0
margin_top = 27.0
margin_right = 923.0
margin_bottom = 41.0
text = "Max Flaps 10"
